changed after elements to div for z-index issues

--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -70,7 +70,7 @@
         }
     }
 
-    &::after {
+    #header-bottom {
         content: "";
         width: 100%;
         height: 600px;
@@ -161,7 +161,7 @@
         right: 50%;
         animation: moveSearch2Ball 0.8s ease-in-out forwards;
         
-        &:hover {
+        #header-bottom {
             background-color: $orange;
         }
     }
@@ -189,7 +189,7 @@
         }
     }
 
-    &::after {
+    #header-bottom {
         content: "";
         width: 100%;
         height: 600px;
